fixed overscroll whitespace, increased Bottom Invest Login button size

--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,7 @@ body {
 	margin: 0;
 	padding: 0;
 	font-family: 'Roboto', sans-serif;
+	overscroll-behavior: none;
 }
 
 ul > li > a.nav-link-active {
